; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_RegisterCategory.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_RegisterCategory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_cm = common dso_local global i32 0, align 4
@CLSID_FakeService = common dso_local global i32 0, align 4
@GUID_TFCAT_TIP_KEYBOARD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"ITfCategoryMgr_RegisterCategory failed\0A\00", align 1
@GUID_TFCAT_DISPLAYATTRIBUTEPROVIDER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RegisterCategory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RegisterCategory() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @g_cm, align 4
  %3 = call i32 @ITfCategoryMgr_RegisterCategory(i32 %2, i32* @CLSID_FakeService, i32* @GUID_TFCAT_TIP_KEYBOARD, i32* @CLSID_FakeService)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = call i32 @SUCCEEDED(i32 %4)
  %6 = call i32 @ok(i32 %5, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* @g_cm, align 4
  %8 = call i32 @ITfCategoryMgr_RegisterCategory(i32 %7, i32* @CLSID_FakeService, i32* @GUID_TFCAT_DISPLAYATTRIBUTEPROVIDER, i32* @CLSID_FakeService)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @SUCCEEDED(i32 %9)
  %11 = call i32 @ok(i32 %10, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ITfCategoryMgr_RegisterCategory(i32, i32*, i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @SUCCEEDED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
